# localstack-gcp-storage-extension

./: LICENSE  Makefile  README.md  setup.cfg
gcp_storage/: __init__.py  extension.py  local_gcp_storage.py
