[metadata]
name = local_gcp_storage
version = 0.1.0
summary = LocalStack Extension: gcp-storage
url = https://github.com/harshcasper/gcp-storage
author = Harsh Mishra
author_email = erbeusgriffincasper@gmail.com
description = gcp-storage
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:
setup_requires =
    setuptools
    wheel
    plux>=1.3
install_requires =
    stevedore>=3.4
    plux>=1.3
    localstack>=1.0
    gcp-storage-emulator>=2022.6.11

[options.entry_points]
localstack.extensions =
    gcp-storage = gcp_storage.extension:MyExtension
